# flucoma_workshop

./: .gitignore  2024-Summer-Workshop-Outline.md
max/: 00a-mlpregressor-synth-control.maxpat  00b-mlpregressor-video-pixels.maxpat  01a-mlpclassifier.maxpat  03a-autoencoder-wavetable.maxpat  05c-audiotransport-analysis.maxpat  05c-audiotransport-function.maxpat  06f-seeding-activations.maxpat  07-analysis-sort.maxpat  08-plot.maxpat  09a-pca-umap-grid-automatic-buffers.maxpat  09a-pca-umap-grid.maxpat  10a-concat.maxpat  10b-concat-realtime.maxpat  11b-kmeans-higher-dimensions.maxpat
max/06-nmf/: 06a-nmf.maxpat
python/: door_slam_1-decomposition.json  pyproject.toml
supercollider/: 01b-know-your-data.scd  04-ampslice.scd  12-human-assumptions.scd
